--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>contact</title>
-        <link rel="stylesheet" href="/css/contact.css">
-        <link rel="stylesheet" href="/css/navbar.css">
-        <link rel="stylesheet" href="/css/index.css">
-        <link rel="icon" type="image/png" href="/img/IG.png">
+        <link rel="stylesheet" href="css/contact.css">
+        <link rel="stylesheet" href="css/navbar.css">
+        <link rel="stylesheet" href="css/index.css">
+        <link rel="icon" type="image/png" href="img/IG.png">
         <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
         
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
