--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>High Risk Payment Gateway for Gaming in India</title>
-    <link rel="stylesheet" href="/css/transnav.css">
-<link rel="stylesheet" href="/css/index.css">
-<link rel="stylesheet" href="/css/contact.css">
-<link rel="preload" as="image" href="/img/main.jpg">
-<link rel="icon" type="image/png" href="/img/IG.png">
- <a href="https://igpay.io/" target="_blank"></a>
+    <link rel="stylesheet" href="css/transnav.css">
+<link rel="stylesheet" href="css/index.css">
+<link rel="stylesheet" href="css/contact.css">
+<link rel="preload" as="image" href="img/main.jpg">
+<link rel="icon" type="image/png" href="img/IG.png">
+ <a href="https://dipti-surve.github.io/igpay/" target="_blank"></a>
 <!--Boxicon CSS CDN-->
 <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
