--- a/industriespages/Vaping.html
+++ b/industriespages/Vaping.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vaping / E-Cig</title>
-    <link rel="stylesheet" href="/css/nutraceutic.css">
-    <link rel="icon" type="image/png" href="/img/IG.png">
-    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="css/nutraceutic.css">
+    <link rel="icon" type="image/png" href="img/IG.png">
+    <link rel="stylesheet" href="css/navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
